<resources>
    <string name="app_name">Sticker Control</string>
    <string name="album_tab">Glued</string>
    <string name="repeated_tab">Repeated</string>
    <string name="loading_stickers">Loading your stickers…</string>
    <string name="menu_delete">Clean album</string>
    <string name="action_bar_name">Cup Album</string>
    <string name="share">Share\nstickers</string>
    <string name="clear_all">Clean\nAll</string>
    <string name="clear_all_dialog_title">Clean all data</string>
    <string name="clear_all_dialog_body">Are you sure that you would like to delete all data? It will clean glued and repeated stickers. It won\'t be possible to reverted this operation!</string>

    <string name="minus_sign" translatable="false">-</string>
    <string name="plus_sign" translatable="false">+</string>

    <string name="share_stickers_missed">Stickers that I don\'t have:</string>
    <string name="share_stickers_repeated">Repeated stickers</string>

    <string name="share_options_title">What would you like to share?</string>
    <string name="share_options_positive_button">Share</string>
    <string name="share_options_error">You don\'t have stickers to share</string>
    <string-array name="share_options">
        <item>Missing stickers</item>
        <item>Repeated stickers</item>
    </string-array>
    <string name="total_stickers" translatable="false">Total: %1$d/%2$d (%3$.1f%%)</string>
</resources>