<?xml version = "1.0" encoding = "utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/action_bar_images_size"
            android:layout_height="@dimen/action_bar_images_size"
            android:layout_marginEnd="3dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/action_bar_name"
            android:textColor="@color/black"
            android:textSize="@dimen/action_bar_title_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/action_bar_images_padding_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share_image"
                android:layout_width="@dimen/action_bar_images_size"
                android:layout_height="@dimen/action_bar_images_size"
                android:layout_gravity="center"
                android:contentDescription="@string/share"
                android:src="@drawable/share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/action_bar_icon_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/clear_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/action_bar_trash_padding"
            android:paddingVertical="@dimen/action_bar_images_padding_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/clear_all_image"
                android:layout_width="@dimen/action_bar_images_size"
                android:layout_height="@dimen/action_bar_images_size"
                android:layout_gravity="center"
                android:contentDescription="@string/clear_all"
                android:src="@drawable/trash" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/clear_all"
                android:textColor="@color/black"
                android:textSize="@dimen/action_bar_icon_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>